--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Wed Jul 13 17:29:08 IST 2011
+#Thu Jul 21 14:42:27 IST 2011
 app.grails.version=1.3.7
 app.name=LinkSharing
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
+plugins.quartz=0.4.2
 plugins.tomcat=1.3.7
