--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,10 @@
 #Grails Metadata file
-#Thu Jul 21 14:42:27 IST 2011
+#Thu Jul 21 16:59:46 IST 2011
 app.grails.version=1.3.7
 app.name=LinkSharing
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
+plugins.mail=1.0-SNAPSHOT
 plugins.quartz=0.4.2
 plugins.tomcat=1.3.7
