--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,13 @@
 #Grails Metadata file
-#Thu Jul 21 16:59:46 IST 2011
+#Wed Jul 27 16:19:48 IST 2011
 app.grails.version=1.3.7
 app.name=LinkSharing
 app.servlet.version=2.4
 app.version=0.1
+plugins.code-coverage=1.2.4
 plugins.hibernate=1.3.7
+plugins.jquery=1.6.1.1
 plugins.mail=1.0-SNAPSHOT
 plugins.quartz=0.4.2
+plugins.spock=0.5-groovy-1.7
 plugins.tomcat=1.3.7
