--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Wed Jul 27 16:19:48 IST 2011
+#Fri Jul 29 09:27:53 IST 2011
 app.grails.version=1.3.7
 app.name=LinkSharing
 app.servlet.version=2.4
@@ -9,5 +9,6 @@ plugins.hibernate=1.3.7
 plugins.jquery=1.6.1.1
 plugins.mail=1.0-SNAPSHOT
 plugins.quartz=0.4.2
+plugins.remote-pagination=0.2.6
 plugins.spock=0.5-groovy-1.7
 plugins.tomcat=1.3.7
